--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -38,7 +38,9 @@ img {
 #header {
     max-width: 100%;
     background-color: var(--color1);
-   
+    position: sticky;
+    top: 0;
+    z-index: 20;
 }
 .brand-logo {
     font-weight: 700;
